# $NetBSD: CHANGES-6.0.3,v 1.1.2.15 2013/07/30 04:09:45 msaitoh Exp $

A complete list of changes from the NetBSD 6.0.2 release to the NetBSD 6.0.3
release:

doc/README.files				patched by hand
gnu/usr.bin/groff/tmac/mdoc.local		patched by hand
sys/sys/param.h					patched by hand

	Welcome to 6.0.2_PATCH.
	[riz]

sys/arch/amiga/dev/if_ne_zbus.c			1.15

	Fix kernel panic on Amigas with Deneb cards.
	[rkujawa, ticket #892]

xsrc/external/mitMesaLib/dist/src/glx/XF86dri.c		patch
xsrc/external/mitlibFS/dist/src/FSOpenServ.c		patch
xsrc/external/mitlibX11/dist/modules/im/ximcp/Makefile.am patch
xsrc/external/mitlibX11/dist/modules/im/ximcp/imLcPrs.c	patch
xsrc/external/mitlibX11/dist/modules/im/ximcp/imTrX.c	patch
xsrc/external/mitlibX11/dist/src/AllCells.c		patch
xsrc/external/mitlibX11/dist/src/Font.c			patch
xsrc/external/mitlibX11/dist/src/FontInfo.c		patch
xsrc/external/mitlibX11/dist/src/FontNames.c		patch
xsrc/external/mitlibX11/dist/src/GetFPath.c		patch
xsrc/external/mitlibX11/dist/src/GetImage.c		patch
xsrc/external/mitlibX11/dist/src/GetMoEv.c		patch
xsrc/external/mitlibX11/dist/src/GetPntMap.c		patch
xsrc/external/mitlibX11/dist/src/GetProp.c		patch
xsrc/external/mitlibX11/dist/src/LiHosts.c		patch
xsrc/external/mitlibX11/dist/src/ListExt.c		patch
xsrc/external/mitlibX11/dist/src/ModMap.c		patch
xsrc/external/mitlibX11/dist/src/Xrm.c			patch
xsrc/external/mitlibX11/dist/src/xcms/cmsColNm.c	patch
xsrc/external/mitlibX11/dist/src/xkb/XKBExtDev.c	patch
xsrc/external/mitlibX11/dist/src/xkb/XKBGeom.c		patch
xsrc/external/mitlibX11/dist/src/xkb/XKBGetMap.c	patch
xsrc/external/mitlibX11/dist/src/xkb/XKBNames.c		patch
xsrc/external/mitlibXcursor/dist/src/file.c		patch
xsrc/external/mitlibXext/dist/src/XEVI.c		patch
xsrc/external/mitlibXext/dist/src/XShape.c		patch
xsrc/external/mitlibXext/dist/src/XSync.c		patch
xsrc/external/mitlibXext/dist/src/Xcup.c		patch
xsrc/external/mitlibXext/dist/src/Xdbe.c		patch
xsrc/external/mitlibXfixes/dist/src/Cursor.c		patch